Fixing alignment issue with iTheme involving different browsers. Since this is a CSS change only, this change does not require another RC release. Tested in FF6 (Win/Linux) and IE9 (compatible mode and native mode). fixes #803

--- a/htdocs/icms.css
+++ b/htdocs/icms.css
@@ -238,7 +238,7 @@ div#disclaimer{
 	background-color: #ffffff;
 	padding-left: 18px;
 }
-#xo-logger-tabs hr{border: solid 2px; margin-top: 5px; margin-left: auto; margin-right: auto; margin-bottom: 3px; width: 100%;}
+
 /*Default ImpressCMS Pagination Style*/
 div.pagination.default{
     margin-top: 20px;
